Fixed Twitter widget width on mobile

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -500,7 +500,9 @@ iframe {
     &-intro { font-size: 1.3em; }
     &-tweets {
         header { padding: 1em 0; }
-        iframe {width: 100%}
+        iframe {
+            width: 100%;
+        }
 
         @media(max-width: @screen-xs) {
             margin-top: 2em;
